Fix bleed through of font weight in title bar into accordion content. Fixes #7792.
Also removed background-color setting that was having no effect.

git-svn-id: http://svn.dojotoolkit.org/src/dijit/trunk@15604 560b804f-0ae3-0310-86f3-f6aa0a117693

--- a/themes/nihilo/layout/AccordionContainer.css
+++ b/themes/nihilo/layout/AccordionContainer.css
@@ -26,18 +26,14 @@
 
 /* common */
 
-.nihilo .dijitAccordionPane {
-	background-color: #e7e7e7;
-	font-size: 0.9em;
-	font-weight: bold;
-	color: #6d6d6d;
-}
-
 .nihilo .dijitAccordionTitle {
 	background:#fafafa url("../images/titleBar.png") repeat-x top left;
 	border-top: 1px solid #dedede;
 	padding: 5px 4px 6px 8px;
 	cursor:pointer;
+	font-size: 0.9em;
+	font-weight: bold;
+	color: #6d6d6d;
 }
 
 .nihilo .dijitAccordionTitle-selected  {
