--- a/themes/soria/layout/AccordionContainer.css
+++ b/themes/soria/layout/AccordionContainer.css
@@ -26,18 +26,14 @@
 
 /* common */
 
-.soria .dijitAccordionPane {
-	background-color: #e7e7e7;
-	font-size: 0.9em;
-	font-weight: bold;
-	color: #373941;
-}
-
 .soria .dijitAccordionTitle {
 	background:#fafafa url("../images/titleBar.png") repeat-x top left;
 	border-top: 1px solid #b9bbdd;
 	padding: 5px 4px 6px 8px;
 	cursor:pointer;
+	font-size: 0.9em;
+	font-weight: bold;
+	color: #373941;
 }
 
 .soria .dijitAccordionTitle-selected  {
